test/libyul/yulSyntaxTests/loadimmutable_shadowing.yul
{
    function loadimmutable(a) {}
}
// ====
// dialect: evm
// ----
// ParserError 5568: (15-28='loadimmutable'): Cannot use builtin function name "loadimmutable" as identifier name.
